--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
             <div id="nav"></div>
 
             <ul id="datalist">
-                <lh>
-                    <span class="timestamp col-1">Timestamp</span>
-                    <span class="movement col-2">Movement</span>
-                </lh>
             </ul>
 
             <svg id="timeline"></div>
@@ -67,17 +63,8 @@
         top: 0,
         right: 10,
         bottom: 0,
-        left: 10
+        left: 0
     }
-
-    // axis / dividing line
-    timeline.append('line')
-            .attr('x1', margin.right)
-            .attr('x2', margin.right)
-            .attr('y1', 0)
-            .attr('y2', height)
-            .style('stroke', "black")
-            .style('stroke-width', 1);
 
     // make strings numbers
     function n(d) {
@@ -102,7 +89,7 @@
 
       y = d3.scaleBand()
         .domain(d3.range(data.length))
-        .rangeRound([0, height])
+        .range([0, height])
         .padding(0.1)
 
       let barHeight = height/data.length;
@@ -119,7 +106,6 @@
             select(i);
         })
 
-
       barGroup.append("rect")
         .attr("x", x(0))
         .attr("y", function(d, i) {
@@ -128,7 +114,7 @@
         .attr("width", parseInt(timeline.style("width"))-margin.right)
         .attr("height", barHeight)
         .attr("class", function(d, ix) {
-            return "barback onion d"+ix;
+            return "barback d"+ix;
         });
 
       barGroup.append("rect")
@@ -136,12 +122,24 @@
         .attr("y", function(d, i) {
             return y(i);
         })
+        .attr("class", "bar")
         .attr("width", function(d) {
             let dist = getDistance(d, false);
             console.log(dist);
             return x(dist) - x(0);
         })
-        .attr("height", barHeight/2);
+        .attr("height", barHeight);
+
+    // axis / dividing line
+    timeline.append('line')
+            .attr('x1', margin.left+1)
+            .attr('x2', margin.left+1)
+            .attr('y1', 0)
+            .attr('y2', height)
+            .style('stroke', "black")
+            .style('stroke-width', 1);
+
+
 
       // DATALIST - list data and provide main UI
 
@@ -178,7 +176,7 @@
                     console.log(d);
                 }
 
-                return (limbMoved != null) ? formatLimb(limbMoved) : 'Not available';
+                return (limbMoved != null) ? formatLimb(limbMoved) : 'N/A';
             });
 
       datalistMovement.append('div')
@@ -480,33 +478,6 @@
         }
 
     }
-
-    // function onionSkin(ix) {
-    //
-    //     // select all . set opacity to 0
-    //     let all = d3.selectAll('.onion');
-    //     all.style('opacity', 0);
-    //
-    //     d3.selectAll('li').style('background-color', 'transparent');
-    //     d3.select('.dli'+ix).style('background-color', 'white');
-    //
-    //     // select ix +- 5 set opacity to 10
-    //     d3.selectAll('.d'+(ix+4)).style('opacity', 0.1);
-    //     d3.selectAll('.d'+(ix-4)).style('opacity', 0.1);
-    //     // select ix +- 4 set opacity to 20
-    //     d3.selectAll('.d'+(ix+3)).style('opacity', 0.2);
-    //     d3.selectAll('.d'+(ix-3)).style('opacity', 0.2);
-    //     // select ix +- 3 set opacity to 30
-    //     d3.selectAll('.d'+(ix+2)).style('opacity', 0.3);
-    //     d3.selectAll('.d'+(ix-2)).style('opacity', 0.3);
-    //     // select ix +- 2 set opacity to 40
-    //     d3.selectAll('.d'+(ix+1)).style('opacity', 0.4);
-    //     d3.selectAll('.d'+(ix-1)).style('opacity', 0.4);
-    //     // select ix +- 1 set opacity to 50
-    //     d3.selectAll('.d'+ix).style('opacity', 1);
-    //     // select ix, set opacity to 100
-    //
-    // }
 
     </script>
 </body>
