--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
 
         <div id="leftside">
 
-            <div id="nav"></div>
+            <div id="nav">
+                <a href="#" id="climb">Climb</a>
+                <a href="#" id="about">About</a>
+                <a href="#" id="process">Process</a>
+                <a href="#" id="cpright">&copy; 2020 Riley Hoonan</a>
+            </div>
 
-            <ul id="datalist">
-            </ul>
+            <div class="header">Movement</div>
+
+            <div class="header">Distance</div>
+
+            <ul id="datalist"></ul>
 
             <svg id="timeline"></div>
 
@@ -92,7 +100,8 @@
         .range([0, height])
         .padding(0.1)
 
-      let barHeight = height/data.length;
+
+      let barHeight = (height - 32)/data.length;
 
       let barGroup = timeline.selectAll("g")
         .data(data)
@@ -118,7 +127,7 @@
         });
 
       barGroup.append("rect")
-        .attr("x", x(0))
+        .attr("x", x(0) - 1)
         .attr("y", function(d, i) {
             return y(i);
         })
@@ -129,17 +138,6 @@
             return x(dist) - x(0);
         })
         .attr("height", barHeight);
-
-    // axis / dividing line
-    timeline.append('line')
-            .attr('x1', margin.left+1)
-            .attr('x2', margin.left+1)
-            .attr('y1', 0)
-            .attr('y2', height)
-            .style('stroke', "black")
-            .style('stroke-width', 1);
-
-
 
       // DATALIST - list data and provide main UI
 
@@ -158,15 +156,13 @@
             });
 
       datalistItem.append('span')
-            .classed('timestamp col-1', true)
+            .classed('timestamp', true)
             .text( function(d) {
                 return formatTime(d.Timestamp_Minutes)
             });
 
-      let datalistMovement = datalistItem.append('div')
-            .classed('movement col-2', true);
 
-      datalistMovement.append('span')
+      datalistItem.append('span')
             .text( function(d) {
 
                 let limbMoved = whichLimbMoved(d);
@@ -179,7 +175,7 @@
                 return (limbMoved != null) ? formatLimb(limbMoved) : 'N/A';
             });
 
-      datalistMovement.append('div')
+      datalistItem.append('div')
             .classed('arrow', true)
             .style('transform', function(d, i) {
                 let limbMoved = whichLimbMoved(d);
@@ -190,7 +186,7 @@
                 return 'rotate('+degrees+'deg)';
             });
 
-      datalistMovement.append('span')
+      datalistItem.append('span')
             .classed('distance', true)
             .html( function(d) {
                 return getDistance(d, true);
